k8s/infra/ingress/sabnzbd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - sabnzbd.home.lan
    secretName: wildcard-home-lan-tls
  rules:
  - host: sabnzbd.home.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 8080
