k8s/infra/ingress/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - sonarr.home.lan
    secretName: wildcard-home-lan-tls
  rules:
  - host: sonarr.home.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
